Fix button text formatting, Debug css on smaller mobile: fix horizontal scrolling issue

--- a/main.css
+++ b/main.css
@@ -89,7 +89,8 @@ h3 {
   color: #111;
   border: 0;
   font-size: 1.1em;
-  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
   padding: 20px 20px;
   border-radius: 2px;
   text-align: center;
@@ -100,6 +101,8 @@ h3 {
   flex-direction: column;
   align-items: center;
   padding: 25px 0px 10px 0px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
 }
 
 .general-button {
@@ -115,6 +118,8 @@ h3 {
   width: 130px;
   height: 60px;
   margin: auto;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
 }
 
 figcaption {
@@ -254,7 +259,12 @@ input, textarea {
 
 @media (max-width: 450px) {
 
+  html, body {
+    overflow-x: hidden;
+  }
+
   body {
+    position: relative;
     font-size: 1em;
   }
 
@@ -298,7 +308,7 @@ input, textarea {
 
   h1 {
     font-size: 36px;
-    padding: 30px 0px;
+    padding: 30px 0px 15px 0px;
   }
 
   h3 {
